--- a/public/race.html
+++ b/public/race.html
@@ -10,6 +10,7 @@
     <button id="createCheckpoints">Create Checkpoints</button>
     <button id="saveCheckpoints" style="display: none;">Save Checkpoints</button>
     <div id="lapCount">Laps: 0</div>
+    <button id="resetGame">Reset</button>
   </div>
 </body>
 </html>
